work around scripted