@@ -6,12 +6,6 @@ organization := "com.eed3si9n"
 
 version := "0.9.1-SNAPSHOT"
 
-// CrossBuilding.crossSbtVersions := Seq("0.11.3", "0.11.2" ,"0.12")
-
-// sbtVersion in Global := "0.13.0-RC1" 
-
-// scalaVersion in Global := "2.10.2" 
-
 description := "sbt plugin to create a single fat jar"
 
 licenses := Seq("MIT License" -> url("https://github.com/sbt/sbt-assembly/blob/master/LICENSE"))
@@ -25,13 +19,6 @@ publishArtifact in (Test, packageBin) := false
 publishArtifact in (Compile, packageDoc) := false
 
 publishArtifact in (Compile, packageSrc) := true
-
-// CrossBuilding.scriptedSettings
-ScriptedPlugin.scriptedSettings
-
-scriptedLaunchOpts ++= Seq("-Xmx1024M", "-XX:MaxPermSize=256M")
-
-scriptedBufferLog := false
 
 publishMavenStyle := false
 
